update final_processing notebooks to save figs

--- a/dmu26/dmu26_XID+MIPS_AKARI-SEP/XID+MIPS_AKARI-SEP_final_processing.ipynb
+++ b/dmu26/dmu26_XID+MIPS_AKARI-SEP/XID+MIPS_AKARI-SEP_final_processing.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -136,7 +139,9 @@
     "use = skew < 5\n",
     "g=sns.jointplot(x=np.log10(SEP_cat['F_MIPS_24'][use]),y=skew[use], kind='hex')\n",
     "print(np.max(skew[use]))\n",
-    "plt.axvline(1.7, 0)\n"
+    "plt.axvline(1.7, 0)\n",
+    "g.savefig('../../data/figs/sk_MIPS_AKARI-SEP.pdf', bbox='tight')\n",
+    "g.savefig('../../data/figs/sk_MIPS_AKARI-SEP.png', bbox='tight')\n"
    ]
   },
   {
@@ -157,7 +162,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -169,7 +177,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -178,7 +189,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -189,7 +203,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -218,7 +235,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -240,9 +260,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
