--- a/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/XID+SPIRE_CDFS-SWIRE_final_processing.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/XID+SPIRE_CDFS-SWIRE_final_processing.ipynb
@@ -15,7 +15,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -240,7 +243,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -270,7 +276,10 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -283,7 +292,10 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -294,7 +306,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -302,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:new]",
+   "display_name": "Python (herschelhelp_python)",
    "language": "python",
-   "name": "conda-env-new-py"
+   "name": "helpext"
   },
   "language_info": {
    "codemirror_mode": {
@@ -316,9 +331,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
