Removing PACS duplicates
Why are they there?

--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -114,6 +114,15 @@
     "                        \"dmu26_XID+PACS_NGP_cat_20200715.fits\")\n",
     "xid_pacs.meta = None\n",
     "\n",
+    "#remove duplicates - this problem will be fixed upstream in dmu26 but this is a quick hack\n",
+    "xid_pacs.sort('help_id')\n",
+    "is_duplicate = xid_pacs['help_id'][1:] == xid_pacs['help_id'][:-1]\n",
+    "if np.sum(is_duplicate)>0:\n",
+    "    print('Field has PACS duplicates... removing them!')\n",
+    "xid_pacs = xid_pacs[~np.append(is_duplicate,False)]\n",
+    "\n",
+    "\n",
+    "\n",
     "print(\"{} flagged as edge and {} flagged not\".format(\n",
     "    np.sum(xid_pacs['Flag_edges']),np.sum(~xid_pacs['Flag_edges']) ))\n",
     "xid_pacs = xid_pacs[~xid_pacs['Flag_edges']]\n",
