--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -101,9 +101,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34218 flagged as edge and 1198418 flagged not\n",
+      "Field has PACS duplicates... removing them!\n",
+      "34218 flagged as edge and 1196130 flagged not\n",
       "There are 415 unflagged pacs green fluxes and 623 unflagged pacs_red\n",
-      "There are 106588 objects with pacs_green s/n > 2 and 170670 with pacs_red s/n > 2\n"
+      "There are 106368 objects with pacs_green s/n > 2 and 170311 with pacs_red s/n > 2\n"
      ]
     }
    ],
@@ -380,16 +381,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n",
-      "set()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_CIGALE_INPUT:\n",
     "    \n",
@@ -609,7 +601,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/NGP.fits_{}.fits\".format(SUFFIX),overwrite=True)"
+    "    merged_table[columns].write(\"data/NGP_{}.fits\".format(SUFFIX),overwrite=True)"
    ]
   }
  ],
@@ -629,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
