REmove estimated total mags from Brown

--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -162,6 +162,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1.1 Remove all Brown total magnitudes\n",
+    "\n",
+    "To make the brown total magnitudes we computed a ratio from the Mosaic i band which led to overestimates in many cases. We therefore remove all these estimates and only use measured total magnitudes from the cross matched catalogues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in brown_catalogue.colnames:\n",
+    "    if (\n",
+    "        (\n",
+    "            col.startswith('m_')\n",
+    "            or col.startswith('merr_')\n",
+    "            or col.startswith('f_')\n",
+    "            or col.startswith('ferr_')\n",
+    "        )\n",
+    "        and ('_ap_' not in col)\n",
+    "    ):\n",
+    "        brown_catalogue.remove_column(col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 - Join the two catalogues taking brown if both are available"
    ]
   },
@@ -597,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
