remove total cols from Brown

--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -125,40 +125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))['full_help_id', 'help_id']\n",
-    "brown_cross_id['help_id'].name = 'brown_help_id'\n",
-    "brown_cross_id['full_help_id'].name = 'help_help_id'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "in_brown = set(brown_catalogue.colnames)\n",
-    "in_help = set(help_catalogue.colnames)\n",
-    "in_both = in_help.intersection(in_brown)\n",
-    "only_in_brown = in_brown - in_help\n",
-    "only_in_help = in_help - in_brown\n",
-    "\n",
-    "for col in brown_catalogue.colnames:\n",
-    "    brown_catalogue[col].name = \"brown_{}\".format(col)\n",
-    "    \n",
-    "for col in help_catalogue.colnames:\n",
-    "    help_catalogue[col].name = \"help_{}\".format(col)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,6 +150,47 @@
     "        and ('_ap_' not in col)\n",
     "    ):\n",
     "        brown_catalogue.remove_column(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "brown_cross_id = Table.read(\"{}/{}\".format(OUT_DIR,brown_cross_id_name))['full_help_id', 'help_id']\n",
+    "brown_cross_id['help_id'].name = 'brown_help_id'\n",
+    "brown_cross_id['full_help_id'].name = 'help_help_id'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find which columns to take from Brown (aperture mags only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "in_brown = set(brown_catalogue.colnames)\n",
+    "in_help = set(help_catalogue.colnames)\n",
+    "in_both = in_help.intersection(in_brown)\n",
+    "only_in_brown = in_brown - in_help\n",
+    "only_in_help = in_help - in_brown\n",
+    "\n",
+    "for col in brown_catalogue.colnames:\n",
+    "    brown_catalogue[col].name = \"brown_{}\".format(col)\n",
+    "    \n",
+    "for col in help_catalogue.colnames:\n",
+    "    help_catalogue[col].name = \"help_{}\".format(col)"
    ]
   },
   {
