Try wih only lbc excluded

--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -148,6 +148,7 @@
     "            or col.startswith('ferr_')\n",
     "        )\n",
     "        and ('_ap_' not in col)\n",
+    "        and ('_lbc_' not in col)\n",
     "    ):\n",
     "        brown_catalogue.remove_column(col)"
    ]
