--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -149,6 +149,7 @@
     "        )\n",
     "        and ('_ap_' not in col)\n",
     "        and ('_lbc_' not in col)\n",
+    "        and ('_suprime_' not in col)\n",
     "    ):\n",
     "        brown_catalogue.remove_column(col)"
    ]
