--- a/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
@@ -33,8 +33,20 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20190701'\n",
+    "SUFFIX = '20201201' #'20190701'\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_Bootes/data/Bootes_{}_cigale.fits\".format(SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    #Remove Brown estimated total mags\n",
+    "    if ('_lbc_' in col) or ('_suprime_' in col):\n",
+    "        master_catalogue.remove_column(col)"
    ]
   },
   {
@@ -232,7 +244,7 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [\"lbc_u\"]\n",
+    "#u_bands = [\"lbc_u\"]\n",
     "g_bands = [            \"90prime_g\", \"gpc1_g\"]\n",
     "r_bands = [\"mosaic_r\", \"90prime_r\", \"gpc1_r\"]\n",
     "i_bands = [\"mosaic_i\",              \"gpc1_i\"]\n",
@@ -259,8 +271,8 @@
    },
    "outputs": [],
    "source": [
+    "#remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
@@ -553,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
