minor changes to Bootes CIGALE input

--- a/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
@@ -378,8 +378,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
@@ -528,13 +529,15 @@
    },
    "outputs": [],
    "source": [
+    "#remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
     "remove_unneeded_fluxes(y_bands)\n",
-    "remove_unneeded_fluxes(j_bands)"
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(h_bands)\n",
+    "remove_unneeded_fluxes(k_bands)"
    ]
   },
   {
