Depths made on all fields except SGP

--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE_INPUT = False\n",
+    "MAKE_CIGALE_INPUT = True\n",
     "MAKE_FINAL = True"
    ]
   },
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Masterlist DR1 date\n",
-    "SUFFIX = '20190701' #+ '_id_test_20200923'"
+    "SUFFIX = '20201201' #'20190701' #+ '_id_test_20200923'"
    ]
   },
   {
