Bug in field name

--- a/dmu32/dmu32_AllSky/2_Depth_maps.ipynb
+++ b/dmu32/dmu32_AllSky/2_Depth_maps.ipynb
@@ -188,7 +188,13 @@
     "        print(list_of_tot_cols)\n",
     "        if len(list_of_tot_cols) >0:\n",
     "            depths['ferr_{}_mean'.format(band)]  = np.nanmin([depths[t] for t in list_of_tot_cols], axis=0)\n",
-    "    depths.write(\"../dmu32_{}/data/depths_{}_{}.fits\".format(FIELD, FIELD.lower(), SUFFIX), overwrite=True)"
+    "    depths.write(\n",
+    "        \"../dmu32_{}/data/depths_{}_{}.fits\".format(\n",
+    "            FIELD.replace('HATLAS-',''), \n",
+    "            FIELD.lower(), \n",
+    "            SUFFIX), \n",
+    "        overwrite=True\n",
+    "    )"
    ]
   },
   {
@@ -1009,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
