bug fix on red list

--- a/dmu22/dmu22_red_source/1_Make_500_70mJy_list.ipynb
+++ b/dmu22/dmu22_red_source/1_Make_500_70mJy_list.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "!mkdir data\n",
-    "full_cat.write('./data/dmu22_XID+SPIRE_HELP_BLIND_Matched_MF.fits', overwrite=Tr\n",
+    "full_cat.write('./data/dmu22_XID+SPIRE_HELP_BLIND_Matched_MF.fits', overwrite=True)\n",
     "full_cat.write('./data/dmu22_XID+SPIRE_HELP_BLIND_Matched_MF.csv', overwrite=True)\n",
     "full_cat = full_cat[full_cat['F_SPIRE_500'] > 70 ]\n",
     "full_cat.write('./data/dmu22_XID+SPIRE_HELP_BLIND_Matched_MF_500_70mJy.fits', overwrite=True)"
