--- a/dmu31/dmu31_Field_overviews/1_Make_field_overviews.ipynb
+++ b/dmu31/dmu31_Field_overviews/1_Make_field_overviews.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table4697847176\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4849046752\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field</th><th>ferr_u_mean_median</th><th>ferr_g_mean_median</th><th>ferr_r_mean_median</th><th>ferr_i_mean_median</th><th>ferr_z_mean_median</th><th>ferr_y_mean_median</th><th>ferr_j_mean_median</th><th>ferr_h_mean_median</th><th>ferr_k_mean_median</th><th>ferr_ks_mean_median</th><th>ferr_irac_i1_mean_median</th><th>ferr_irac_i2_mean_median</th><th>ferr_irac_i3_mean_median</th><th>ferr_irac_i4_mean_median</th><th>ferr_mips_24_mean_median</th><th>ferr_pacs_green_mean_median</th><th>ferr_pacs_red_mean_median</th><th>ferr_spire_250_mean_median</th><th>ferr_spire_350_mean_median</th><th>ferr_spire_500_mean_median</th></tr></thead>\n",
        "<thead><tr><th>str18</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>SA13</td><td>nan</td><td>0.499644935131073</td><td>0.7986563444137573</td><td>nan</td><td>0.9065105319023132</td><td>nan</td><td>14.501233100891113</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>3705.364013671875</td><td>4037.108642578125</td><td>4141.72412109375</td></tr>\n",
@@ -170,7 +170,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table4697847568\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4849046416\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field</th><th>objects</th><th>dr1_file</th><th>dr1_file_hash</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<thead><tr><th>str18</th><th>int64</th><th>str81</th><th>str32</th><th>float64</th><th>int64</th><th>str9</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>AKARI-NEP</td><td>531746</td><td>dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits</td><td>5b33074e816785e05407952f03e78354</td><td>9.194732358779467</td><td>433440000</td><td>433.44 MB</td><td>31441</td><td>107228</td><td>1239</td></tr>\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +272,7 @@
       "ELAIS-S1\n",
       "GAMA-09\n",
       "Lockman-SWIRE\n",
-      "ELAIS-N2\n",
-      "Herschel-Stripe-82\n",
-      "SA13\n",
-      "GAMA-12\n"
+      "ELAIS-N2\n"
      ]
     },
     {
@@ -289,6 +286,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Herschel-Stripe-82\n",
+      "SA13\n",
+      "GAMA-12\n",
       "GAMA-15\n",
       "AKARI-SEP\n",
       "HATLAS-SGP\n",
@@ -342,12 +342,20 @@
     "        xid_objects=overview[overview['field'] == yml['field']]['xid_objects'][0],\n",
     "        photoz_objects=overview[overview['field'] == yml['field']]['photoz_objects'][0],\n",
     "        cigale_objects=overview[overview['field'] == yml['field']]['cigale_objects'][0],\n",
-    "        median_g_depth=\"AB {} mag, or {} uJy\".format(flux_to_mag(median_g_depth*1.e-6)[0],round(median_g_depth,2)),\n",
-    "        median_k_depth=\"AB {} mag, or {} uJy\".format(flux_to_mag(median_k_depth*1.e-6)[0],round(median_k_depth,2)),\n",
-    "        median_i1_depth=\"AB {} mag, or {} uJy\".format(flux_to_mag(median_i1_depth*1.e-6)[0],round(median_i1_depth,2)),\n",
-    "        median_250_depth=\"AB {} mag, or {} uJy\".format(flux_to_mag(median_250_depth*1.e-6)[0],round(median_250_depth,2)),\n",
+    "        median_g_depth=\"AB {} mag, or {} uJy\".format(\n",
+    "            round(flux_to_mag(median_g_depth*1.e-6)[0],2),\n",
+    "            round(median_g_depth,2)),\n",
+    "        median_k_depth=\"AB {} mag, or {} uJy\".format(\n",
+    "            round(flux_to_mag(median_k_depth*1.e-6)[0],2),\n",
+    "            round(median_k_depth,2)),\n",
+    "        median_i1_depth=\"AB {} mag, or {} uJy\".format(\n",
+    "            round(flux_to_mag(median_i1_depth*1.e-6)[0],2),\n",
+    "            round(median_i1_depth,2)),\n",
+    "        median_250_depth=\"AB {} mag, or {} uJy\".format(\n",
+    "            round(flux_to_mag(median_250_depth*1.e-6)[0],2),\n",
+    "            round(median_250_depth,2)),\n",
     "        best_phot=hedam + '/dmu32/dmu32_AllSky/data/{}_best_phot_20201111.fits'.format(yml['field']),\n",
-    "        master_list=hedam+yml['final'],\n",
+    "        master_list=hedam+yml['final'].replace('dmu_products',''),\n",
     "        blind_list=(\n",
     "            hedam+\n",
     "            '/dmu22/dmu22_{}/data/dmu22_XID+SPIRE_{}_BLIND_Matched_MF.fits'.format(\n",
