add changes to Number counts notebook

--- a/dmu31/dmu31_Examples/HELP_paper_figures/1_Number_counts.ipynb
+++ b/dmu31/dmu31_Examples/HELP_paper_figures/1_Number_counts.ipynb
@@ -2164,9 +2164,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python (herschelhelp_internal)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "helpint"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2178,7 +2178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
