Work on paper figures

--- a/dmu31/dmu31_Field_overviews/1_Make_field_overviews.ipynb
+++ b/dmu31/dmu31_Field_overviews/1_Make_field_overviews.ipynb
@@ -66,9 +66,7 @@
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "template = open('./html.template', 'r').read()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -253,15 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel_launcher.py:2: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  \n"
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel_launcher.py:3: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     },
     {
@@ -272,23 +270,23 @@
       "ELAIS-S1\n",
       "GAMA-09\n",
       "Lockman-SWIRE\n",
-      "ELAIS-N2\n"
+      "ELAIS-N2\n",
+      "Herschel-Stripe-82\n",
+      "SA13\n",
+      "GAMA-12\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel_launcher.py:20: RuntimeWarning: All-NaN axis encountered\n"
+      "/Users/rs548/miniconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel_launcher.py:21: RuntimeWarning: All-NaN axis encountered\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Herschel-Stripe-82\n",
-      "SA13\n",
-      "GAMA-12\n",
       "GAMA-15\n",
       "AKARI-SEP\n",
       "HATLAS-SGP\n",
@@ -308,6 +306,7 @@
     }
    ],
    "source": [
+    "template = open('./html.template', 'r').read()\n",
     "for field_meta in meta_ymls:\n",
     "    yml = yaml.load(open(field_meta, 'r'))\n",
     "    print(yml['field'])\n",
