--- a/dmu4/dmu4_sm_COSMOS/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_COSMOS/generate_holes.ipynb
@@ -213,13 +213,27 @@
     "            dec_typ=fields[field][1],\n",
     "            order=ORDER)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starmask.reg2moc('/home/rshirley/COSMOS2020/cosmos2020.calet.org/MASKS/MASK_HSC-stars_griz.reg',\n",
+    "            '../../dmu2/dmu2_field_coverages/COSMOS_MOC.fits',\n",
+    "            '/home/rshirley/COSMOS2020/holes_' + field + '_' + pristine_cat[1] + '_O' + str(ORDER) + SUFFIX + '.fits',\n",
+    "            ra_typ=fields[field][0],\n",
+    "            dec_typ=fields[field][1],\n",
+    "            order=ORDER)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:herschelhelp_internal]",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "conda-env-herschelhelp_internal-py"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
