--- a/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
@@ -196,7 +196,7 @@
    "source": [
     "\n",
     "catalogue = Table.read(\n",
-    "    OUT_DIR+\"cosmos2020.calet.org/PHOTOMETRY/\"+\n",
+    "    OUT_DIR+\"/cosmos2020.calet.org/PHOTOMETRY/\"+\n",
     "    \"COSMOS2020_CLASSIC_v1.8_formatted.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
