IRAC flag bug on COSMOS DR2

--- a/dmu1/dmu1_ml_COSMOS/2_Merging-DR2.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging-DR2.ipynb
@@ -91,7 +91,7 @@
     "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "#TMP_DIR = '/Volumes/Raph500/COSMOS2020' #COSMOS is currently private so all data processed locally\n",
     "#OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
-    "OUT_DIR ='~/COSMOS2020'\n",
+    "OUT_DIR ='/home/rshirley/COSMOS2020'\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
     "\n",
     "try:\n",
@@ -1206,7 +1206,12 @@
     "    1 * ~np.isnan(master_catalogue['f_ukidss_k'])\n",
     ")\n",
     "\n",
-    "nb_mir_flux = np.zeros(len(master_catalogue), dtype=bool)"
+    "nb_mir_flux = (\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i1']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i2']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i3']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_irac_i4'])\n",
+    ")"
    ]
   },
   {
