--- a/dmu1/dmu1_ml_COSMOS/2_Merging-DR2.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging-DR2.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "#cosmos2020 = Table.read(\"{}/COSMOS2020_HELP.fits\".format(TMP_DIR))\n",
-    "cosmos2020 = Table.read(\"~/COSMOS2020/COSMOS2020_HELP.fits\".format(TMP_DIR))\n",
+    "cosmos2020 = Table.read(\"/home/rshirley/COSMOS2020/COSMOS2020_HELP.fits\".format(TMP_DIR))\n",
     "\n",
     "candels = Table.read(\"{}/CANDELS.fits\".format(TMP_DIR))\n",
     "cfhtls = Table.read(\"{}/CFHTLS.fits\".format(TMP_DIR))\n",
