--- a/dmu32/dmu32_AllSky/2_Depth_maps.ipynb
+++ b/dmu32/dmu32_AllSky/2_Depth_maps.ipynb
@@ -220,63 +220,12 @@
     "        print(list_of_tot_cols)\n",
     "        if len(list_of_tot_cols) >0:\n",
     "            depths['ferr_{}_mean'.format(band)]  = np.nanmin([depths[t] for t in list_of_tot_cols], axis=0)\n",
-    "    depths.write(\n",
-    "        \"./data/depths_{}_ml_{}_made_{}.fits\".format(\n",
-    "            FIELD, \n",
-    "            SUFFIX,\n",
-    "            TODAY\n",
-    "        ), \n",
-    "        overwrite=True\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Depth maps produced using: AKARI-NEP_20180215.fits\n",
-      "tot_bands ['megacam_u', 'megacam_g', 'gpc1_g', 'gpc1_r', 'megacam_r', 'gpc1_i', 'megacam_i', 'gpc1_z', 'megacam_z', 'gpc1_y', 'wircam_y', 'wircam_j', 'wircam_ks', 'irac_i1', 'irac_i2', 'mips_24', 'pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']\n",
-      "ap_bands ['gpc1_g', 'gpc1_r', 'gpc1_i', 'gpc1_z', 'gpc1_y', 'irac_i1', 'irac_i2']\n",
-      "u\n",
-      "[]\n",
-      "['ferr_megacam_u_mean']\n",
-      "g\n",
-      "['ferr_ap_gpc1_g_mean']\n",
-      "['ferr_megacam_g_mean', 'ferr_gpc1_g_mean']\n",
-      "r\n",
-      "['ferr_ap_gpc1_r_mean']\n",
-      "['ferr_gpc1_r_mean', 'ferr_megacam_r_mean']\n",
-      "i\n",
-      "['ferr_ap_gpc1_i_mean']\n",
-      "['ferr_gpc1_i_mean', 'ferr_megacam_i_mean']\n",
-      "z\n",
-      "['ferr_ap_gpc1_z_mean']\n",
-      "['ferr_gpc1_z_mean', 'ferr_megacam_z_mean']\n",
-      "y\n",
-      "['ferr_ap_gpc1_y_mean']\n",
-      "['ferr_gpc1_y_mean', 'ferr_wircam_y_mean']\n",
-      "j\n",
-      "[]\n",
-      "['ferr_wircam_j_mean']\n",
-      "h\n",
-      "[]\n",
-      "[]\n",
-      "k\n",
-      "[]\n",
-      "[]\n",
-      "ks\n",
-      "[]\n",
-      "['ferr_wircam_ks_mean']\n"
-     ]
-    }
-   ],
-   "source": [
-    "make_depth_map('../dmu32_AKARI-NEP/meta_main.yml')"
+    "            \n",
+    "    depth_filename = \"../dmu32_{}/data/depths_{}_{}.fits\".format(\n",
+    "            FIELD.replace('HATLAS-',''), \n",
+    "            FIELD.lower(), \n",
+    "            SUFFIX )\n",
+    "    depths.write(depth_filename, overwrite=True)"
    ]
   },
   {
