--- a/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
@@ -153,8 +153,8 @@
     "    'HSC_z': 'suprime_z',\n",
     "    'HSC_y': 'suprime_y',\n",
     "    #Spitzer IRAC\n",
-    "    'SPLASH_CH1': 'irac_i1', #'irac_i1'???\n",
-    "    'SPLASH_CH2': 'irac_i2', # #irac_i2\n",
+    "    'IRAC_CH1': 'irac_i1', #'irac_i1'???\n",
+    "    'IRAC_CH2': 'irac_i2', # #irac_i2\n",
     "    'SPLASH_CH3': 'irac_i3', # #irac_i1\n",
     "    'SPLASH_CH4': 'irac_i4', # #irac_i4\n",
     "})"
@@ -175,18 +175,25 @@
     "})\n",
     "\n",
     "for band in list(bands):\n",
-    "    if 'SPLASH' not in band:\n",
+    "    if ('IRAC' not in band) and ('SPLASH' not in band):\n",
     "        imported_columns.update({band + '_MAG_AUTO': 'm_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_MAGERR_AUTO': 'merr_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_FLUX_APER2': 'f_ap_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_FLUXERR_APER2': 'ferr_ap_cosmos-' + bands[band]})\n",
-    "    elif 'SPLASH' in band:\n",
+    "    elif ('IRAC' not in band) and ('SPLASH' not in band):\n",
     "        imported_columns.update({band + '_FLUX': 'f_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_FLUXERR': 'ferr_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_MAG': 'm_cosmos-' + bands[band]})\n",
     "        imported_columns.update({band + '_MAGERR': 'merr_cosmos-' + bands[band]})        \n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
