--- a/dmu32/dmu32_AllSky/3_Depth_maps_summaries.ipynb
+++ b/dmu32/dmu32_AllSky/3_Depth_maps_summaries.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summaise depth maps"
+    "# Summarise depth maps"
    ]
   },
   {
