--- a/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.10_COSMOS2020.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "OUT_DIR = '/Volumes/Raph500/COSMOS2020'\n",
-    "OUT_DIR = '~/COSMOS2020'\n",
+    "OUT_DIR = '/home/rshirley/COSMOS2020'\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
     "except FileExistsError:\n",
