Add blind numbers to dr1 summary

--- a/dmu32/3_The_end.ipynb
+++ b/dmu32/3_The_end.ipynb
@@ -335,7 +335,9 @@
     "dr1['file_size_readable']  =np.full(len(dr1), 0, dtype=np.dtype('U250'))\n",
     "dr1['xid_objects']         =np.full(len(dr1), 0, dtype=int)\n",
     "dr1['photoz_objects']      =np.full(len(dr1), 0, dtype=int)\n",
-    "dr1['cigale_objects']      =np.full(len(dr1), 0, dtype=int)"
+    "dr1['cigale_objects']      =np.full(len(dr1), 0, dtype=int)\n",
+    "dr1['blind_objects']      =np.full(len(dr1), 0, dtype=int)\n",
+    "\n"
    ]
   },
   {
@@ -422,6 +424,10 @@
     "        dr1['xid_objects'][this_row]        = np.sum(cat['f_spire_500']>0)\n",
     "        dr1['photoz_objects'][this_row]     =  np.sum(cat['redshift']>0)\n",
     "        dr1['cigale_objects'][this_row]     = np.sum(cat['cigale_sfr']>0)\n",
+    "        \n",
+    "        blind = Table.read('../dmu22/dmu22_{}/data/dmu22_XID+SPIRE_{}_BLIND_Matched_MF.fits'.format(\n",
+    "            y['field'],y['field']))\n",
+    "        dr1['blind_objects'][this_row]     = len(blind)\n",
     "    \n",
     "    except:\n",
     "        print('Problem reading {}'.format(y['final']))"
@@ -601,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
